--- a/index.html
+++ b/index.html
@@ -104,24 +104,23 @@
           </div>
           <div class="col-sm-4">
             <img
-              class="img-fluid"
+              class="bio-image img-fluid"
               src="img/george.jpeg"
               alt="Photo of George"
             />
           </div>
           <div class="col-md-4">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-              lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
-              Proin fermentum orci sit amet nisi finibus lacinia. Duis
-              ullamcorper in elit id venenatis.
+            <p class="larger">
+              I am a web developer, programmer, and graduate student at Portland State
+             University in the Computer Science program. 
             </p>
           </div>
-          <div class="col-md-4"><p>
-            Ut efficitur non purus ac
-            laoreet. In a leo non velit posuere ultrices. Etiam vitae massa
-            sapien. Etiam auctor dolor quis sem malesuada ultricies.</p>
-            <p>If you're ready, go ahead and <a href="#contact">contact me!</a></p>
+          <div class="col-md-4">
+            <p>In my spare time I like to
+          listen to music, play computer games, read, and watch TV. As I've been
+          working and doing school from home, I have also been learning some new
+          recipes.</p>
+            <p>If you want to reach out and work together, go ahead and <a href="#contact">contact me!</a></p>
           </div>
         </div>
       </div>
@@ -486,11 +485,7 @@
                   <p class="role">Masters in Computer Science</p>
                   <p class="dates">2022 - Present</p>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
-                    Proin fermentum orci sit amet nisi finibus lacinia. Duis
-                    ullamcorper in elit id venenatis. Ut efficitur non purus ac
-                    laoreet.
+                    I actually started attending PSU in 2019 in order to complete the Grad Prep prerequisites in order to apply for the graduate program in Computer Science. Upon completion of my prerequisites in late 2021, I was admitted into the program and began my graduate studies. I am primarily focused on learning software development.
                   </p>
                 </li>
                 <li class="list-group-item job">
@@ -499,11 +494,7 @@
                   <p class="role">Software Development Certification</p>
                   <p class="dates">2016</p>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
-                    Proin fermentum orci sit amet nisi finibus lacinia. Duis
-                    ullamcorper in elit id venenatis. Ut efficitur non purus ac
-                    laoreet.
+                    I took a fast-paced software programming bootcamp course at Epicodus in downtown Portland, where I quickly learned how to build applications in Javascript and .NET. 
                   </p>
                 </li>
                 <li class="list-group-item job">
@@ -512,11 +503,7 @@
                   <p class="role">Bachelor of Arts in Digital Technology & Culture</p>
                   <p class="dates">2010 - 2014</p>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
-                    Proin fermentum orci sit amet nisi finibus lacinia. Duis
-                    ullamcorper in elit id venenatis. Ut efficitur non purus ac
-                    laoreet.
+                    I focused primarily on multimedia authoring and web design in my studies in the Digital Technology & Culture program at WSU Vancouver. While attending, I was a recipient of the Ronald P. Hoss Memorial scholarship. I was also a member of the Associated Students of WSU Vancouver on the communications team.
                   </p>
                 </li>
             </ul>
