--- a/index.html
+++ b/index.html
@@ -442,11 +442,7 @@
                 <p class="role">Web Developer</p>
                 <p class="dates">2019 - Present</p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                  lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
-                  Proin fermentum orci sit amet nisi finibus lacinia. Duis
-                  ullamcorper in elit id venenatis. Ut efficitur non purus ac
-                  laoreet.
+                  Maintain student organization websites and implement updates per organization request, website design and development in HTM, CSS, PHP using Wordpress template customization.
                 </p>
               </li>
               <li class="list-group-item job">
@@ -455,24 +451,25 @@
                 <p class="role">Entry Level Software Developer</p>
                 <p class="dates">2017 - 2019</p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                  lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
-                  Proin fermentum orci sit amet nisi finibus lacinia. Duis
-                  ullamcorper in elit id venenatis. Ut efficitur non purus ac
-                  laoreet.
+                  Building Angular-based front end control panels using Typescript with responsive HTML & CSS design. Maintaining application load balancers, SSL certificates, and DNS routing using Amazon Web Services.
                 </p>
               </li>
+              <li class="list-group-item job">
+                <a name="skidata"></a>
+                  <h4>Intervisual Corp.</h4>
+                  <p class="role">Software Development Intern</p>
+                  <p class="dates">2016</p>
+                  <p>
+                    Building a modular extension to an existing web-based e-commerce application in the Magento content management system.
+                  </p>
+                </li>
               <li class="list-group-item job">
               <a name="fringe"></a>
                 <h4>Fringe Digital Marketing Agency</h4>
                 <p class="role">Web Developer</p>
                 <p class="dates">2014 - 2016</p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                  lacinia egestas leo eu dapibus. In laoreet eleifend suscipit.
-                  Proin fermentum orci sit amet nisi finibus lacinia. Duis
-                  ullamcorper in elit id venenatis. Ut efficitur non purus ac
-                  laoreet.
+                  Responsible for designing & developing WordPress templates from start to finish. Also responsible for web hosting management, technical support for clients, and implementing SEO.
                 </p>
               </li>
           </ul>
