Updated badge formatting

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <div class="badges">
                 <span class="badge badge-html">HTML</span>
                 <span class="badge badge-css">CSS</span>
-                <span class="badge badge-js">Javascript</span>
+                <span class="badge badge-js">JavaScript</span>
               </div>
               <a
                 type="button"
@@ -185,7 +185,7 @@
               <div class="badges">
                 <span class="badge badge-html">HTML</span>
                 <span class="badge badge-css">CSS</span>
-                <span class="badge badge-js">Javascript</span>
+                <span class="badge badge-js">JavaScript</span>
                 <span class="badge badge-php">PHP</span>
               </div>
               <a
@@ -224,7 +224,6 @@
               <div class="badges">
                 <span class="badge badge-html">HTML</span>
                 <span class="badge badge-css">CSS</span>
-                <span class="badge badge-php">PHP</span>
                 <span class="badge badge-wp">WordPress</span>
               </div>
               <a
@@ -268,7 +267,6 @@
               <div class="badges">
                 <span class="badge badge-html">HTML</span>
                 <span class="badge badge-css">CSS</span>
-                <span class="badge badge-php">PHP</span>
                 <span class="badge badge-wp">WordPress</span>
               </div>
               <a
@@ -302,8 +300,7 @@
               <div class="badges">
                 <span class="badge badge-html">HTML</span>
                 <span class="badge badge-css">CSS</span>
-                <span class="badge badge-js">Javascript</span>
-                <span class="badge badge-php">PHP</span>
+                <span class="badge badge-js">JavaScript</span>
                 <span class="badge badge-wp">WordPress</span>
               </div>
               <a
@@ -339,8 +336,7 @@
               <div class="badges">
                 <span class="badge badge-html">HTML</span>
                 <span class="badge badge-css">CSS</span>
-                <span class="badge badge-js">Javascript</span>
-                <span class="badge badge-php">PHP</span>
+                <span class="badge badge-js">JavaScript</span>
                 <span class="badge badge-wp">WordPress</span>
               </div>
               <a
@@ -367,7 +363,7 @@
               <div class="badges">
                 <span class="badge badge-html">HTML</span>
                 <span class="badge badge-css">CSS</span>
-                <span class="badge badge-js">Javascript</span>
+                <span class="badge badge-js">JavaScript</span>
                 <span class="badge badge-net">.NET</span>
               </div>
               <a
@@ -397,7 +393,7 @@
               <div class="badges">
                 <span class="badge badge-html">HTML</span>
                 <span class="badge badge-css">CSS</span>
-                <span class="badge badge-js">Javascript</span>
+                <span class="badge badge-js">JavaScript</span>
                 <span class="badge badge-net">.NET</span>
               </div>
               <a
@@ -498,7 +494,7 @@
                     <p class="role">Software Development Certification</p>
                     <p class="dates">2016</p>
                     <p>
-                      I took a fast-paced software programming bootcamp course at Epicodus in downtown Portland, where I quickly learned how to build applications in Javascript and .NET. 
+                      I took a fast-paced software programming bootcamp course at Epicodus in downtown Portland, where I quickly learned how to build applications in JavaScript and .NET. 
                     </p>
                   </li>
                   <li class="list-group-item job">
