Fix formatting in index.html project links

--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
             <div class="col-md-4 project-col">
               <div class="card bg-dark">
               <h4>KPSU RadioCo Player</h4>
-              <img
-                class="img-fluid"
-                src="img/kpsu-player.png"
-                alt="Screenshot of the KPSU radio player using RadioCo"
-              />
+              <a href="https://kpsu.org/rareradio/player/" target="_blank">
+                <img
+                  class="img-fluid"
+                  src="img/kpsu-player.png"
+                  alt="Screenshot of the KPSU radio player using RadioCo"
+                />
+              </a>
               <div class="badges">
                 <span class="badge badge-html">HTML</span>
                 <span class="badge badge-css">CSS</span>
