Updated some images as well as date on site

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="col-sm-4">
               <img
                 class="bio-image img-fluid"
-                src="img/george.jpeg"
+                src="img/george.jpg"
                 alt="Photo of George"
               />
             </div>
@@ -140,6 +140,26 @@
               </div>
           </div>
           <div class="row project-section">
+            <div class="col-12 project-col">
+              <div class="bg-dark row">
+              <div class="col-md-12">
+                <h4>Rare Releases</h4>
+                <div class="badges">
+                  <span class="badge badge-html">HTML</span>
+                  <span class="badge badge-css">CSS</span>
+                  <span class="badge badge-python">Python</span>
+                </div>
+                  <a
+                    href="https://github.com/golson-pdx/rarereleases"
+                    target="_blank"
+                    >View on Github</a
+                  >
+                  <p>
+                    A web application built in python that connects to your Spotify account and finds rare musical releases from your top three artists, using Discogs. 
+                  </p>
+              </div>
+            </div>
+            </div>
             <div class="col-12 project-col">
               <div class="bg-dark row">
               <div class="col-md-4">
@@ -486,7 +506,7 @@
     </main>
     <footer class="text-center">
         <div class="container">
-            <p>George Olson, 2022</p>
+            <p>George Olson, 2024</p>
         </div>
     </footer>
   </body>
