Updated experience section

--- a/index.html
+++ b/index.html
@@ -142,26 +142,6 @@
           <div class="row project-section">
             <div class="col-12 project-col">
               <div class="bg-dark row">
-              <div class="col-md-12">
-                <h4>Rare Releases</h4>
-                <div class="badges">
-                  <span class="badge badge-html">HTML</span>
-                  <span class="badge badge-css">CSS</span>
-                  <span class="badge badge-python">Python</span>
-                </div>
-                  <a
-                    href="https://github.com/golson-pdx/rarereleases"
-                    target="_blank"
-                    >View on Github</a
-                  >
-                  <p>
-                    A web application built in python that connects to your Spotify account and finds rare musical releases from your top three artists, using Discogs. 
-                  </p>
-              </div>
-            </div>
-            </div>
-            <div class="col-12 project-col">
-              <div class="bg-dark row">
               <div class="col-md-4">
                 <img
                   class="img-fluid project-img"
@@ -189,6 +169,26 @@
                     layout that matches the site’s new identity. The player opens in
                     a separate browser window so music can play in the background
                     without relying on an AJAX Wordpress template.
+                  </p>
+              </div>
+            </div>
+            </div>
+            <div class="col-12 project-col">
+              <div class="bg-dark row">
+              <div class="col-md-12">
+                <h4>Rare Releases</h4>
+                <div class="badges">
+                  <span class="badge badge-html">HTML</span>
+                  <span class="badge badge-css">CSS</span>
+                  <span class="badge badge-python">Python</span>
+                </div>
+                  <a
+                    href="https://github.com/golson-pdx/rarereleases"
+                    target="_blank"
+                    >View on Github</a
+                  >
+                  <p>
+                    A web application built in python that connects to your Spotify account and finds rare musical releases from your top three artists, using Discogs. 
                   </p>
               </div>
             </div>
@@ -309,7 +309,7 @@
                     <span class="badge badge-wp">WordPress</span>
                   </div>
                   <a
-                    href="https://web.archive.org/web/20160411033639/http://www.wrkengrs.com/projects/"
+                    href="https://web.archive.org/web/20220817221435/http://www.wrkengrs.com/"
                     target="_blank"
                     >View</a
                   >
@@ -416,16 +416,16 @@
                 <p class="role">Web Developer</p>
                 <p class="dates">2019 - Present</p>
                 <p>
-                  Maintain student organization websites and implement updates per organization request, website design and development in HTM, CSS, PHP using Wordpress template customization.
+                  Maintain student organization websites and implement updates per organization request, website design and development in HTM, CSS, and PHP. 
                 </p>
               </li>
               <li class="list-group-item job">
               <a name="skidata"></a>
                 <h4>SKIDATA</h4>
-                <p class="role">Entry Level Software Developer</p>
+                <p class="role">Software Engineer</p>
                 <p class="dates">2017 - 2019</p>
                 <p>
-                  Building Angular-based front end control panels using Typescript with responsive HTML & CSS design. Maintaining application load balancers, SSL certificates, and DNS routing using Amazon Web Services.
+                  Building Angular-based front end control panels using Typescript with responsive HTML & CSS design. Maintaining application load balancers, SSL certificates, and DNS routing using Amazon Web Services. 
                 </p>
               </li>
               <li class="list-group-item job">
