Updated skills on site

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
                 I am a web developer, programmer, and graduate student at Portland State
               University in the Computer Science program. 
               </p>
+              <p>
+                My skills include C# & .NET, C, SQL, Python, Java, JavaScript, WordPress, PHP, Object Oriented Design, Agile Development, HTML, CSS, SCRUM, Full Stack Development, XUnit Testing, Git, Web Development & Design, UX/UI, GDPR compliance, AWS, Web Hosting Management, and Local & International Collaboration.
+              </p>
             </div>
             <div class="col-md-4">
               <p>In my spare time I like to
@@ -416,7 +419,7 @@
                 <p class="role">Web Developer</p>
                 <p class="dates">2019 - Present</p>
                 <p>
-                  Maintain student organization websites and implement updates per organization request, website design and development in HTM, CSS, and PHP. 
+                  Maintained student organization websites and implemented updates per organization request, website design and development in HTML, CSS, and PHP. Provided mentorship to new members of the web development team. Built new website redesigns through the entire development cycle. 
                 </p>
               </li>
               <li class="list-group-item job">
@@ -425,7 +428,7 @@
                 <p class="role">Software Engineer</p>
                 <p class="dates">2017 - 2019</p>
                 <p>
-                  Building Angular-based front end control panels using Typescript with responsive HTML & CSS design. Maintaining application load balancers, SSL certificates, and DNS routing using Amazon Web Services. 
+                  Developed responsive front-end control panels using Angular and Typescript while transitioning from an old CMS. Designed new functionalities for .NET-based microservices on the backend. Maintained AWS resources including application load balancers, SSL certificates, and DNS routing. Additionally, designed and built automated services to generate daily, weekly, and monthly data reports for clients. 
                 </p>
               </li>
               <li class="list-group-item job">
@@ -434,7 +437,7 @@
                   <p class="role">Software Development Intern</p>
                   <p class="dates">2016</p>
                   <p>
-                    Building a modular extension to an existing web-based e-commerce application in the Magento content management system.
+                    Built a modular extension for an established web-based e-commerce application in the Magento content management system. 
                   </p>
                 </li>
               <li class="list-group-item job">
@@ -443,7 +446,7 @@
                 <p class="role">Web Developer</p>
                 <p class="dates">2014 - 2016</p>
                 <p>
-                  Responsible for designing & developing WordPress templates from start to finish. Also responsible for web hosting management, technical support for clients, and implementing SEO.
+                  Led the development process of WordPress templates from inception to completion. Managed web hosting operations, provided technical support to clients, and implemented SEO strategies for optimal website performance. 
                 </p>
               </li>
           </ul>
@@ -463,7 +466,7 @@
                     <p class="role">Masters in Computer Science</p>
                     <p class="dates">2022 - Present</p>
                     <p>
-                      I actually started attending PSU in 2019 in order to complete the Grad Prep prerequisites in order to apply for the graduate program in Computer Science. Upon completion of my prerequisites in late 2021, I was admitted into the program and began my graduate studies. I am primarily focused on learning software development.
+                      MS in Computer Science (expected June 2024) preceded by grad prep program.
                     </p>
                   </li>
                   <li class="list-group-item job">
@@ -472,7 +475,7 @@
                     <p class="role">Software Development Certification</p>
                     <p class="dates">2016</p>
                     <p>
-                      I took a fast-paced software programming bootcamp course at Epicodus in downtown Portland, where I quickly learned how to build applications in JavaScript and .NET. 
+                      C# and .NET Framework specialization. 
                     </p>
                   </li>
                   <li class="list-group-item job">
@@ -481,7 +484,7 @@
                     <p class="role">Bachelor of Arts in Digital Technology & Culture</p>
                     <p class="dates">2010 - 2014</p>
                     <p>
-                      I focused primarily on multimedia authoring and web design in my studies in the Digital Technology & Culture program at WSU Vancouver. While attending, I was a recipient of the Ronald P. Hoss Memorial scholarship. I was also a member of the Associated Students of WSU Vancouver on the communications team.
+                      BA in Digital Technology and Culture, focus on web design & development.
                     </p>
                   </li>
               </ul>
