Added KPSU Redesign to page

--- a/index.html
+++ b/index.html
@@ -148,6 +148,34 @@
               <div class="col-md-4">
                 <img
                   class="img-fluid project-img"
+                  src="img/kpsu.png"
+                  alt="Screenshot of the KPSU radio player using RadioCo"
+                />
+              </div>
+              <div class="col-md-8">
+                <h4>KPSU Redesign</h4>
+                <div class="badges">
+                  <span class="badge badge-html">HTML</span>
+                  <span class="badge badge-css">CSS</span>
+                  <span class="badge badge-php">PHP</span>
+                  <span class="badge badge-wp">WordPress</span>
+                </div>
+                  <a
+                    href="https://kpsu.org/"
+                    target="_blank"
+                    >View</a
+                  >
+                  <p>
+                    A complete redesign of KPSU radio station's website, using a theme from a previous developer that has been fully customized to fit their needs, using custom post types and custom-built templates for show pages & show notes. 
+                  </p>
+              </div>
+            </div>
+            </div>
+            <div class="col-12 project-col">
+              <div class="bg-dark row">
+              <div class="col-md-4">
+                <img
+                  class="img-fluid project-img"
                   src="img/kpsu-player.png"
                   alt="Screenshot of the KPSU radio player using RadioCo"
                 />
@@ -158,6 +186,8 @@
                   <span class="badge badge-html">HTML</span>
                   <span class="badge badge-css">CSS</span>
                   <span class="badge badge-js">JavaScript</span>
+                  <span class="badge badge-php">PHP</span>
+                  <span class="badge badge-wp">WordPress</span>
                 </div>
                   <a
                     href="https://kpsu.org/player/"
@@ -243,6 +273,7 @@
                   <div class="badges">
                     <span class="badge badge-html">HTML</span>
                     <span class="badge badge-css">CSS</span>
+                    <span class="badge badge-php">PHP</span>
                     <span class="badge badge-wp">WordPress</span>
                   </div>
                   <a
@@ -274,10 +305,11 @@
                   />
                 </div>
                 <div class="col-md-8">
-                  <h4>Sub Basement Studios</h4>
+                  <h4>Sub Basement Studios Redesign</h4>
                   <div class="badges">
                     <span class="badge badge-html">HTML</span>
                     <span class="badge badge-css">CSS</span>
+                    <span class="badge badge-php">PHP</span>
                     <span class="badge badge-wp">WordPress</span>
                   </div>
                   <a
@@ -309,6 +341,7 @@
                     <span class="badge badge-html">HTML</span>
                     <span class="badge badge-css">CSS</span>
                     <span class="badge badge-js">JavaScript</span>
+                    <span class="badge badge-php">PHP</span>
                     <span class="badge badge-wp">WordPress</span>
                   </div>
                   <a
@@ -342,6 +375,7 @@
                     <span class="badge badge-html">HTML</span>
                     <span class="badge badge-css">CSS</span>
                     <span class="badge badge-js">JavaScript</span>
+                    <span class="badge badge-php">PHP</span>
                     <span class="badge badge-wp">WordPress</span>
                   </div>
                   <a
