Added image for Rare Releases

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             </div>
             <div class="col-md-4">
               <p class="larger">
-                I am a web developer, programmer, and graduate student at Portland State
-              University in the Computer Science program. 
+                I am a web developer, programmer, and recently graduated student at Portland State
+              University in the Computer Science masters program. 
               </p>
               <p>
                 My skills include C# & .NET, C, SQL, Python, Java, JavaScript, WordPress, PHP, Object Oriented Design, Agile Development, HTML, CSS, SCRUM, Full Stack Development, XUnit Testing, Git, Web Development & Design, UX/UI, GDPR compliance, AWS, Web Hosting Management, and Local & International Collaboration.
@@ -149,7 +149,7 @@
                 <img
                   class="img-fluid project-img"
                   src="img/kpsu.png"
-                  alt="Screenshot of the KPSU radio player using RadioCo"
+                  alt="Screenshot of the KPSU homepage"
                 />
               </div>
               <div class="col-md-8">
@@ -208,7 +208,14 @@
             </div>
             <div class="col-12 project-col">
               <div class="bg-dark row">
-              <div class="col-md-12">
+                <div class="col-md-4">
+                  <img
+                    class="img-fluid project-img"
+                    src="img/gramophone.png"
+                    alt="Image of the logo used for Rare Releases"
+                  />
+                </div>
+              <div class="col-md-8">
                 <h4>Rare Releases</h4>
                 <div class="badges">
                   <span class="badge badge-html">HTML</span>
