Added 'Maxine' project to portfolio

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51201347-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-51201347-1');
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -58,6 +67,11 @@
                   class="dropdown-menu bg-dark"
                   aria-labelledby="navbarDropdown"
                 >
+                  <li>
+                    <a class="dropdown-item" href="#freelance"
+                      >Freelance</a
+                    >
+                  </li>
                   <li>
                     <a class="dropdown-item" href="#studentmedia"
                       >Student Media Tech Team</a
@@ -202,6 +216,33 @@
                     layout that matches the site’s new identity. The player opens in
                     a separate browser window so music can play in the background
                     without relying on an AJAX Wordpress template.
+                  </p>
+              </div>
+            </div>
+            </div>
+            <div class="col-12 project-col">
+              <div class="bg-dark row">
+              <div class="col-md-4">
+                <img
+                  class="img-fluid project-img"
+                  src="img/max-type5.jpg"
+                  alt="Trimet"
+                />
+              </div>
+              <div class="col-md-8">
+                <h4>Maxine, Virtual Trimet Assistant</h4>
+                <div class="badges">
+                  <span class="badge badge-html">HTML</span>
+                  <span class="badge badge-css">CSS</span>
+                  <span class="badge badge-js">JavaScript</span>
+                </div>
+                  <a
+                    href="/maxine-trimettracker"
+                    target="_blank"
+                    >View on GitHub</a
+                  >
+                  <p>
+                    'Maxine' is a virtual transit assistant that helps the user plan a trip on Portland's MAX and streetcar metro systems. The purpose of the application is to provide users with detailed routes including stops, transfers, and estimated travel times. Additional information includes total duration, the fare for the trip, and transfers. The application also provides alerts for different MAX routes and stops. You can even find the closest MAX station to a given location. The app aims to enhance the commuting experience by offering accurate and user-friendly transit information in a quick and easy manner. 
                   </p>
               </div>
             </div>
@@ -455,10 +496,19 @@
             <div class="col-md-12">
             <ul class="list-group bg-dark">
               <li class="list-group-item job">
+                <a name="studentmedia"></a>
+                  <h4>Freelance</h4>
+                  <p class="role">Full Stack Developer</p>
+                  <p class="dates">2024 - Present</p>
+                  <p>
+                    Currently taking on freelance projects in web development, WordPress design, full stack software development, and more while I am looking for a full-time role. Connect with me on <a href="https://www.upwork.com/freelancers/~01baca78ce10bf3b08?mp_source=share" target="_blank">UpWork</a> if you'd like to collaborate on a project!
+                  </p>
+                </li>
+              <li class="list-group-item job">
               <a name="studentmedia"></a>
                 <h4>Portland State University Student Media</h4>
                 <p class="role">Web Developer</p>
-                <p class="dates">2019 - Present</p>
+                <p class="dates">2019 - 2024</p>
                 <p>
                   Maintained student organization websites and implemented updates per organization request, website design and development in HTML, CSS, and PHP. Provided mentorship to new members of the web development team. Built new website redesigns through the entire development cycle. 
                 </p>
