Whoops, wrong URL for Maxine!

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                   <span class="badge badge-js">JavaScript</span>
                 </div>
                   <a
-                    href="/maxine-trimettracker"
+                    href="https://github.com/golson-pdx/maxine-trimettracker"
                     target="_blank"
                     >View on GitHub</a
                   >
