Updated some content on home page about me, social links, job experience

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM2W5o5R0M7iE5o06MJb5deBt3fHpXQFAFFj2qZ" crossorigin="anonymous">
   </head>
 
   <body>
@@ -121,7 +122,17 @@
         <div class="container">
           <div class="row project-section">
             <div class="col-12">
-              <h3 class="underline-header">Hi, I'm George.</h3>
+              <h3 class="underline-header">Hi, I'm George. 
+                <a class="social-icon" href="https://www.linkedin.com/in/gjolson/" target="_blank" aria-label="Linkedin">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+                <a class="social-icon" href="https://www.upwork.com/freelancers/~01baca78ce10bf3b08" target="_blank" aria-label="Upwork">
+                  <i class="fa fa-briefcase"></i>
+                </a>
+                <a class="social-icon" href="https://www.instagram.com/geogrej" target="_blank" aria-label="Instagram">
+                  <i class="fa fa-instagram"></i>
+                </a>
+              </h3>
             </div>
             <div class="col-sm-4">
               <img
@@ -132,19 +143,27 @@
             </div>
             <div class="col-md-4">
               <p class="larger">
-                I am a web developer, programmer, and recently graduated student at Portland State
-              University in the Computer Science masters program. 
+                Hello! I'm George, a passionate web developer and programmer who just crossed the finish line at Portland State University with a master’s degree in Computer Science. 
               </p>
               <p>
-                My skills include C# & .NET, C, SQL, Python, Java, JavaScript, WordPress, PHP, Object Oriented Design, Agile Development, HTML, CSS, SCRUM, Full Stack Development, XUnit Testing, Git, Web Development & Design, UX/UI, GDPR compliance, AWS, Web Hosting Management, and Local & International Collaboration.
+                 I thrive in the world of C# & .NET, Python, and SQL, but I'm also fluent in the languages of Java, JavaScript, and PHP. Whether it's crafting seamless user experiences with HTML, CSS, and UX/UI principles or diving deep into Agile Development and Object-Oriented Design, I love bringing ideas to life. 
               </p>
             </div>
             <div class="col-md-4">
-              <p>In my spare time I like to
-            listen to music, play computer games, read, and watch TV. As I've been
-            working and doing school from home, I have also been learning some new
-            recipes.</p>
-              <p>If you want to reach out and work together, go ahead and <a href="mailto:olsongeorgej@gmail.com">contact me!</a></p>
+              <p>I’m a firm believer in the power of collaboration, whether it's local or international, and have a knack for making GDPR compliance and web hosting management less daunting. My toolkit is rounded out with skills in WordPress, AWS, Full Stack Development, and more. When I'm not coding, you might find me dreaming up new travel adventures or experimenting with the latest technologies.</p>
+              <p> If you're interested in collaborating or just want to chat, feel free to reach out—I'd love to hear from you!</p>
+              <p><a href="mailto:olsongeorgej@gmail.com">Email me!</a></p>
+              <p>
+                <a class="social-icon" href="https://www.linkedin.com/in/gjolson/" target="_blank" aria-label="Linkedin">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+                <a class="social-icon" href="https://www.upwork.com/freelancers/~01baca78ce10bf3b08" target="_blank" aria-label="Upwork">
+                  <i class="fa fa-briefcase"></i>
+                </a>
+                <a class="social-icon" href="https://www.instagram.com/geogrej" target="_blank" aria-label="Instagram">
+                  <i class="fa fa-instagram"></i>
+                </a>
+              </p>
             </div>
           </div>
         </div>
@@ -519,7 +538,7 @@
                 <p class="role">Software Engineer</p>
                 <p class="dates">2017 - 2019</p>
                 <p>
-                  Developed responsive front-end control panels using Angular and Typescript while transitioning from an old CMS. Designed new functionalities for .NET-based microservices on the backend. Maintained AWS resources including application load balancers, SSL certificates, and DNS routing. Additionally, designed and built automated services to generate daily, weekly, and monthly data reports for clients. 
+                  Developed responsive front-end control panels for professional sports team loyalty programs using Angular and Typescript while transitioning from an old CMS. Designed new functionalities for .NET-based microservices on the backend. Maintained AWS resources including application load balancers, SSL certificates, and DNS routing. Additionally, designed and built automated services to generate daily, weekly, and monthly data reports for clients. 
                 </p>
               </li>
               <li class="list-group-item job">
@@ -555,9 +574,9 @@
                     <a name="psu"></a>
                     <h4>Portland State University</h4>
                     <p class="role">Masters in Computer Science</p>
-                    <p class="dates">2022 - Present</p>
+                    <p class="dates">2022 - 2024</p>
                     <p>
-                      MS in Computer Science (expected June 2024) preceded by grad prep program.
+                      Masters of Science in Computer Science preceded by grad prep program.
                     </p>
                   </li>
                   <li class="list-group-item job">
